--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
     "axios": "^0.21.1",
     "babel-eslint": "^10.0.3",
     "babel-preset-env": "^1.7.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.4.3",
     "email-validator": "^2.0.4",
     "local-lib": "^0.1.0",
     "node-sass": "^4.13.0",
     "password-validator": "^5.0.3",
     "sass-loader": "^8.0.0",
+    "swiper": "5.x",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
