--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,7 @@ server.port=8000
 server.servlet.session.timeout=60
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 spring.datasource.url=jdbc:mysql://i4c109.p.ssafy.io:3306/pjt1?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
@@ -23,30 +22,6 @@ spring.mail.password=ssafypjt1@pw
 #redis
 spring.redis.host=localhost
 spring.redis.port=6379
-=======
-=======
-#spring.datasource.url=jdbc:mysql://i4c109.p.ssafy.io:3306/pjt1?autoReconnect=true&useUnicode=true&characterEncoding=utf8
->>>>>>> c38ac7618f1ff37b7e93cde1631c08198cf422f6
-spring.datasource.url=jdbc:mysql://localhost:3306/pjt1?autoReconnect=true&useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/pjt1?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 #spring.datasource.password=root
-spring.datasource.password=ssafy
-
-mybatis.type-aliases-package=com.ssafy.pjt1.model
-mybatis.mapper-locations=mapper/**/*.xml
-<<<<<<< HEAD
->>>>>>> c737ff39a52551131c767163b4baf9e0bc046c8c
-=======
-
-#Java MailSender
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.username=ssafypjt1@gmail.com
-spring.mail.password=ssafypjt1@pw
-
-#redis
-spring.redis.host=localhost
-spring.redis.port=6379
->>>>>>> c38ac7618f1ff37b7e93cde1631c08198cf422f6
