--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.3",
+    "vue-toast-notification": "^0.6.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
